fixed playerlist not showing and lengthed the playerlist to 25% again

--- a/public/style.css
+++ b/public/style.css
@@ -113,7 +113,7 @@
 .left-sidebar {
 	height: 100%;
 	min-width: 300px;
-    width: 20%;
+    width: 25%;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -154,10 +154,15 @@
 	border-radius: 5px;
 	padding: 3px;
 	margin-left: 5px;
+	width: 22px;
+	height: 22px;
 }
 .pl-button:hover {
 	border: 1px solid gray;
 	background-color: lightgray;
+}
+.pl-spacer{
+	visibility: hidden;
 }
 .selected-icon {
 	border: 1px solid gray;
